--- a/css/style.css
+++ b/css/style.css
@@ -5090,7 +5090,7 @@ a .bg-light:focus, a .bg-light:hover, button .bg-light:focus, button .bg-light:h
 }
 
 .bg-dark {
-	background-color: #00ff55 !important;
+	background-color: #c7fff3 !important;
 }
 
 a .bg-dark:focus, a .bg-dark:hover, button .bg-dark:focus, button .bg-dark:hover {
