--- a/css/style.css
+++ b/css/style.css
@@ -1607,7 +1607,7 @@ header .navbar-toggler-icon {
 }
 
 header .bg-dark .navbar-nav .nav-link {
-	color: #dcdcdc;
+	color: #525252;
 }
 
 header .bg-dark .navbar-nav .nav-link:hover {
@@ -1615,7 +1615,7 @@ header .bg-dark .navbar-nav .nav-link:hover {
 }
 
 header .bg-dark .navbar-nav .active .nav-link {
-	color: #fff;
+	color: #262626;
 }
 
 header .bg-dark .navbar-toggler-icon {
