--- a/css/style.css
+++ b/css/style.css
@@ -9820,7 +9820,7 @@ code {
 	display: block;
 	text-decoration: none;
 	color: #fff;
-	background: #004cff;
+	background: #0073ff;
 	text-align: center;
 	border-radius: 50%;
 	outline: none;
