--- a/css/style.css
+++ b/css/style.css
@@ -1611,7 +1611,7 @@ header .bg-dark .navbar-nav .nav-link {
 }
 
 header .bg-dark .navbar-nav .nav-link:hover {
-	color: #004cff;
+	color: #0073ff;
 }
 
 header .bg-dark .navbar-nav .active .nav-link {
@@ -1647,14 +1647,14 @@ header + header {
 	font-family: Meiryo UI;
 	letter-spacing: 3.5px;
 	text-shadow: 
-		2px  2px 9px #004cff,
-		-2px  2px 9px #004cff,
-		2px -2px 9px #004cff,
-		-2px -2px 9px #004cff,
-		2px  0px 9px #004cff,
-		0px  2px 9px #004cff,
-		-2px  0px 9px #004cff,
-		0px -2px 9px #004cff;
+		2px  2px 9px #0073ff,
+		-2px  2px 9px #0073ff,
+		2px -2px 9px #0073ff,
+		-2px -2px 9px #0073ff,
+		2px  0px 9px #0073ff,
+		0px  2px 9px #0073ff,
+		-2px  0px 9px #0073ff,
+		0px -2px 9px #0073ff;
 }
 
 h1 .logo {
@@ -1664,14 +1664,14 @@ h1 .logo {
 	font-family: Meiryo UI;
 	letter-spacing: 3.5px;
 	text-shadow: 
-		2px  2px 9px #004cff,
-		-2px  2px 9px #004cff,
-		2px -2px 9px #004cff,
-		-2px -2px 9px #004cff,
-		2px  0px 9px #004cff,
-		0px  2px 9px #004cff,
-		-2px  0px 9px #004cff,
-		0px -2px 9px #004cff;
+		2px  2px 9px #0073ff,
+		-2px  2px 9px #0073ff,
+		2px -2px 9px #0073ff,
+		-2px -2px 9px #0073ff,
+		2px  0px 9px #0073ff,
+		0px  2px 9px #0073ff,
+		-2px  0px 9px #0073ff,
+		0px -2px 9px #0073ff;
 }
 
 :root{
